--- a/src/css/style.css
+++ b/src/css/style.css
@@ -45,7 +45,7 @@ body {
 .hero {
     grid-area: hero;
     height: 89vh;
-    background: url('./src/images/lemons.jpg') center center no-repeat;
+    background: url('../images/lemons.jpg') center center no-repeat;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -60,7 +60,7 @@ body {
 }
 
 .hero:after {
-    content: url('./src/images/seta_preta.png');
+    content: url('../images/seta_preta.png');
     height: 35px;
     bottom: 40px;
     position: absolute;
