--- a/src/css/style.css
+++ b/src/css/style.css
@@ -134,12 +134,12 @@ body {
 }
 
 .about .image.right {
-    background: url('./src/images/bridge.jpg') center center no-repeat;
+    background: url('../images/bridge.jpg') center center no-repeat;
     background-size: cover;
 }
 
 .about .image.left {
-    background: url('./src/images/sky.jpg') center center no-repeat;
+    background: url('../images/sky.jpg') center center no-repeat;
     background-size: cover;
 }
 
